# use-my-action2

./: README.md  action.yaml  pyproject.toml  setup.cfg
.github/: test.txt
.github/workflows/: main.yaml
src/: test.py
src/example_package_test/: Dogg.py  __init__.py
src/example_package_test/api/: AA.py
tests/: test.py
