[metadata]
name = example-package-Sean-Wu-TW
version = 1.0.0
author = Sean Wu
author_email = sean840411@gmail.com
description = A small example package for testing pypi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sean-Wu-TW/package-tutorial
project_urls =
    Bug Tracker = https://github.com/Sean-Wu-TW/package-tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
